Bug 154886 - Report builder mutex assertion
Summary: Report builder mutex assertion
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.6.0
Keywords: haveBacktrace
Depends on:
Blocks: Crash-Assert
  Show dependency treegraph
 
Reported: 2023-04-18 17:25 UTC by Buovjaga
Modified: 2023-04-23 16:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
GDB trace of crash (6.36 KB, text/plain)
2023-04-18 17:25 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2023-04-18 17:25:54 UTC
Created attachment 186761 [details]
GDB trace of crash

Run a debug build.

1. Open attachment 186632 [details] from bug 154780
2. In Reports, click Use wizard to create report
3. Add Memo to fields in report
4. Click Finish

vcl/source/app/dbggui.cxx:35: void ImplDbgTestSolarMutex(): Assertion `ImplGetSVData()->mpDefInst->GetYieldMutex()->IsCurrentThread() && "SolarMutex not owned!"' failed.

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1ee5ae0eec2d1c673af6b8f18a2c36b4d1e7fb70
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Comment 1 Julien Nabet 2023-04-18 18:28:38 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

Noel: thought you might be interested in this one since a2e78d06df22e99f2dc82ee3245ddc4c5de56acf "fix concurrent access to fontcache" seems to have reveal a bug in report
Comment 2 Noel Grandin 2023-04-23 11:50:58 UTC
reportdesign::lcl_getDefaultFonts needs to take the SolarMutex before calling into vcl.
Julien, want to try making a patch?
Comment 3 Julien Nabet 2023-04-23 12:26:08 UTC
(In reply to Noel Grandin from comment #2)
> reportdesign::lcl_getDefaultFonts needs to take the SolarMutex before
> calling into vcl.
> Julien, want to try making a patch?

Done with this:
https://gerrit.libreoffice.org/c/core/+/150826

Thank you! :-)
Comment 4 Commit Notification 2023-04-23 14:33:16 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2b87376d7e8cc9d5973a8ccd4c9fdf398ebbd2a0

tdf#154886: fix Report builder mutex assertion

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.