tdf#154886: fix Report builder mutex assertion

Thank you Noel for the hint!

Change-Id: Icb1f63deaffc454e0dcc3b736c9214d93b6871df
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150826
Reviewed-by: Ilmari Lauhakangas <ilmari.lauhakangas@libreoffice.org>
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>